--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "file-loader": "^0.11.2",
     "flux": "^3.1.3",
     "jquery": "^3.2.1",
+    "md5": "^2.2.1",
     "mopidy": "^0.5.0",
     "node-sass": "^4.5.3",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
     "react-fontawesome": "*",
     "react-ga": "^2.3.4",
+    "react-input-range": "1.3.0",
     "react-lazyload": "2.2.7",
     "react-redux": "^5.0.6",
     "react-router": "^3.2.0",
@@ -41,13 +43,13 @@
     "style-loader": "^0.13.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.6.0",
-    "webpack-strip": "0.1.0",
-    "react-input-range": "1.3.0"
+    "webpack-strip": "0.1.0"
   },
   "scripts": {
     "build": "node build_tools/build.js",
     "dev": "node build_tools/build.js && NODE_ENV=development webpack --watch",
     "prod": "node build_tools/build.js && NODE_ENV=development webpack && NODE_ENV=production webpack --watch",
+    "prod-nowatch": "node build_tools/build.js && NODE_ENV=development webpack && NODE_ENV=production webpack",
     "release": "node build_tools/build.js && NODE_ENV=production webpack && NODE_ENV=development webpack && python setup.py sdist upload -r pypi && build_tools/release.sh"
   }
 }
